--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,7 +1,17 @@
 <div class="row">
-    <h1><strong>Pure <span class="red">AngularJs</span> <br> <span class="orange">Gregorian</span> and <span class="orange">Jalali</span> <br> smart date & time picker</strong></h1>
+    <h1>
+        <strong>Pure <span class="red">AngularJs</span> <br> <span class="orange">Gregorian</span> and <span class="orange">Jalali</span> <br> smart date & time picker</strong>
+        <br>
+        <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&type=follow&count=true" frameborder="0" scrolling="0" width="230px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=watch&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+        <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=fork&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+    </h1>
     <hr>
-    <br>
+    <h2><strong>KeyWords</strong></h2>
+    <div class="keyWords">
+        <pre class="inline">AngularJs</pre> <pre class="inline">Gregorian</pre> <pre class="inline">Jalali</pre> <pre class="inline">Date & Time picker</pre> <pre class="inline">Two calendar in one datePicker</pre> <pre class="inline">RangePicker</pre> <pre class="inline">Update range limitation automatilcy</pre> <pre class="inline">Disabling pattern</pre> <pre class="inline">Responsive</pre> <pre class="inline">UNIX supporting</pre>
+    </div>
+    <hr>
     <h2><strong>Implementation steps</strong></h2>
     <hr>
     <h3>Step 1: Install ADM-dateTimePicker</h3>
