--- a/views/home/home.html
+++ b/views/home/home.html
@@ -1,22 +1,29 @@
 <div class="row">
     <h1>
-        <strong>Pure <span class="red">AngularJs</span> <br> <span class="orange">Gregorian</span> and <span class="orange">Jalali</span> <br> smart date & time picker</strong>
+        <strong>Pure <span class="red">AngularJs</span> <br> <span class="orange">Gregorian</span> and <span class="orange">Jalali</span> <br> smart dateTimePicker</strong>
         <br>
 <!--        <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&type=follow&count=true" frameborder="0" scrolling="0" width="230px" height="20px"></iframe>-->
         <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=watch&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
         <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=fork&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
+        <img src="https://img.shields.io/badge/npm-v1.0.0-brightgreen.svg" alt="">
+        <img src="https://img.shields.io/badge/Pure-AngularJs-red.svg" alt="">
+        <img src="http://img.shields.io/badge/License-MIT-lightgrey.svg?style=flat" alt="">
+
     </h1>
     <hr>
     <br>
     <h2><strong>Tags</strong></h2>
     <hr>
     <div class="keyWords">
-        <pre class="inline">AngularJs</pre> <pre class="inline">Gregorian</pre> <pre class="inline">Jalali</pre> <pre class="inline">Date & Time picker</pre> <pre class="inline">Two calendar in one datePicker</pre> <pre class="inline">RangePicker</pre> <pre class="inline">Update range limitation automatilcy</pre> <pre class="inline">Disabling pattern</pre> <pre class="inline">Responsive</pre> <pre class="inline">UNIX</pre> <pre class="inline">SASS</pre> <pre class="inline">Compass</pre> <pre class="inline">Bootstrap</pre>
+        <pre class="inline">AngularJs</pre> <pre class="inline">Gregorian</pre> <pre class="inline">Jalali</pre> <pre class="inline">DateTimePicker</pre> <pre class="inline">Two calendar in one datePicker</pre> <pre class="inline">RangePicker</pre> <pre class="inline">Update range limitation automatilcy</pre> <pre class="inline">Disabling pattern</pre> <pre class="inline">Responsive</pre> <pre class="inline">UNIX</pre> <pre class="inline">SASS</pre> <pre class="inline">Compass</pre> <pre class="inline">Bootstrap</pre>
     </div>
     <br>
     <h2><strong>Implementation steps</strong></h2>
     <hr>
     <h3>Step 1: Install ADM-dateTimePicker</h3>
+<div hljs no-escape class="customCode">
+npm install adm-dtp
+</div>
     <h3>Step 2: Include the files in your app</h3>
     
 <div hljs no-escape class="customCode">
