Add adm-dtp to bower

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -6,6 +6,7 @@
         <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=watch&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
         <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=fork&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
         <img src="https://img.shields.io/badge/npm-v1.1.1-brightgreen.svg" alt="">
+        <img src="https://img.shields.io/badge/bower-v1.1.1-brightgreen.svg" alt="">
         <img src="https://img.shields.io/badge/Pure-AngularJs-red.svg" alt="">
         <img src="http://img.shields.io/badge/License-MIT-lightgrey.svg?style=flat" alt="">
 
@@ -36,6 +37,7 @@
     <h3>Step 1: Install ADM-dateTimePicker</h3>
 <div hljs no-escape class="customCode">
 npm install adm-dtp
+bower install adm-dtp
 </div>
     <h3>Step 2: Include the files in your app</h3>
     
