--- a/views/home/home.html
+++ b/views/home/home.html
@@ -5,13 +5,26 @@
 <!--        <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&type=follow&count=true" frameborder="0" scrolling="0" width="230px" height="20px"></iframe>-->
         <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=watch&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
         <iframe src="https://ghbtns.com/github-btn.html?user=AmirkabirDataMiners&repo=ADM-dateTimePicker&type=fork&count=true" frameborder="0" scrolling="0" width="90px" height="20px"></iframe>
-        <img src="https://img.shields.io/badge/npm-v1.1.6-brightgreen.svg" alt="">
-        <img src="https://img.shields.io/badge/bower-v1.1.6-brightgreen.svg" alt="">
+        <img src="https://img.shields.io/badge/npm-v1.1.9-brightgreen.svg" alt="">
+        <img src="https://img.shields.io/badge/bower-v1.1.9-brightgreen.svg" alt="">
         <img src="https://img.shields.io/badge/Pure-AngularJs-red.svg" alt="">
         <img src="http://img.shields.io/badge/License-MIT-lightgrey.svg?style=flat" alt="">
 
     </h1>
     <hr>
+    <br>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid newFeatures">
+            <div class="navbar-header">
+                <img class="version" src="https://img.shields.io/badge/Updates-v1.1.9-85DEF9.svg" alt="">
+                <br>
+                <ul>
+                    <li>Rediuce stylesheet size by 70%</li>
+                    <li>Fix unused font dependency</li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <br>
     <nav class="navbar navbar-default">
         <div class="container-fluid newFeatures">
